--- a/email-templates/orderCustomerNotification.ejs
+++ b/email-templates/orderCustomerNotification.ejs
@@ -751,7 +751,7 @@
           <td><%= item.type %></td>
           <td><%= item.class %></td>
           <td><%= item.country.name %></td>
-          <td>$<%= item.price %> <i><%= item.promoCode ? '(-$'+item.discountAmount.toFixed(2)+')' : '' %></i></td>
+          <td align="right" >$<%= item.price %> <i><%= item.promoCode ? '(-$'+item.discountAmount.toFixed(2)+')' : '' %></i></td>
         </tr>
       	<% }) %>
     
@@ -761,16 +761,16 @@
         <tr>
             <td colspan="5"><strong>Total Amount in US $ </strong></td>
                 
-            <td class="amount"><strong>$<%= totalAmount.toFixed(2) %></strong></td>
+            <td align="right" class="amount"><strong>$<%= totalAmount.toFixed(2) %></strong></td>
 
         </tr>
 		<tr>
             <td colspan="5"><strong>Less Payment (Stripe)</strong></td>
-            <td class="amount"><strong>$<%= totalAmount.toFixed(2) %></strong></td>
+            <td align="right" class="amount"><strong>$<%= totalAmount.toFixed(2) %></strong></td>
         </tr>
 		<tr>
             <td colspan="5"><strong>Balance</strong></td>
-            <td class="amount"><strong>$0.00</strong></td>
+            <td align="right" class="amount"><strong>$0.00</strong></td>
         </tr>
     </tfoot>
 
@@ -798,7 +798,7 @@
 				<td><%= order.content.word_mark ? order.content.word_mark : order.content.mark %></td>
 				<td><%= order.content.type %></td>
 				<td><%= order.content.class %></td>
-				<td>$<%= order.content.delivery.amount %></td>
+				<td align="right">$<%= order.content.delivery.amount %></td>
 			</tr>
 		
 		<tbody>  
@@ -807,16 +807,16 @@
 			<tr>
 				<td colspan="4"><strong>Total Amount in US $ </strong></td>
 					
-				<td class="amount"><strong>$80.00</strong></td>
+				<td align="right" class="amount"><strong>$80.00</strong></td>
 	
 			</tr>
 			<tr>
 				<td colspan="4"><strong>Less Payment (Stripe)</strong></td>
-				<td class="amount"><strong>$80.00</strong></td>
+				<td align="right" class="amount"><strong>$80.00</strong></td>
 			</tr>
 			<tr>
 				<td colspan="4"><strong>Balance</strong></td>
-				<td class="amount"><strong>$0.00</strong></td>
+				<td align="right" class="amount"><strong>$0.00</strong></td>
 			</tr>
 		</tfoot>
 
@@ -838,7 +838,7 @@
 			<tr>
 				<td>Trademarkers LLC Service</td>
 				<td><%= order.paymentDescription %></td>
-				<td>$<%= (order.charge.amount / 100).toFixed(2) %></td>
+				<td align="right">$<%= (order.charge.amount / 100).toFixed(2) %></td>
 
 			</tr>
 
@@ -849,16 +849,16 @@
 			<tr>
 				<td colspan="2"><strong>Total Amount in US $ </strong></td>
 					
-				<td class="amount"><strong>$<%= (order.charge.amount / 100).toFixed(2) %></strong></td>
+				<td align="right" class="amount"><strong>$<%= (order.charge.amount / 100).toFixed(2) %></strong></td>
 	
 			</tr>
 			<tr>
 				<td colspan="2"><strong>Less Payment (Stripe)</strong></td>
-				<td class="amount"><strong>$<%= (order.charge.amount / 100).toFixed(2) %></strong></td>
+				<td align="right" class="amount"><strong>$<%= (order.charge.amount / 100).toFixed(2) %></strong></td>
 			</tr>
 			<tr>
 				<td colspan="2"><strong>Balance</strong></td>
-				<td class="amount"><strong>$0.00</strong></td>
+				<td align="right" class="amount"><strong>$0.00</strong></td>
 			</tr>
 		</tfoot>
 
