--- a/views/order/registrationLanding.ejs
+++ b/views/order/registrationLanding.ejs
@@ -352,7 +352,7 @@
 								<li>Draft a Settlement Agreement</li>
 							</ul>
 
-							<p><a class="btn btn-primary btn-black btn-pull-right" style="border-radius:40px" href="/service">Order Now</a></p>
+							<p><a class="btn btn-primary btn-black btn-pull-right" style="border-radius:40px" href="/services">Order Now</a></p>
 						</div>
 					</div>
 					
