--- a/views/admin/articles/add.ejs
+++ b/views/admin/articles/add.ejs
@@ -32,7 +32,7 @@
             <div class="form-group">
                 <label>Status</label>
                 <select class="form-control" name="status">
-                    <option value="Customer">Published</option>
+                    <option value="Published">Published</option>
                     <option value="Draft">Draft</option>
                 </select>
             </div>
