--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -11,6 +11,7 @@
 <% if ( typeof description != "undefined" ) { %>
     <meta name="keywords" content="<%= keywords ? keywords : 'Trademarkers LLC' %>">
 <% } %>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Fonts -->
 <link rel="dns-prefetch" href="https://fonts.gstatic.com">
 <!-- <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet" type="text/css"> -->
