--- a/public/stylesheets/less/_head.less
+++ b/public/stylesheets/less/_head.less
@@ -106,6 +106,7 @@
                 padding: 10px;
                 display: inline-block;
                 font-weight: 400;
+                text-shadow: 0px 0px 2px #000;
 
                 @media (max-width: 768px){
                     display: block;
@@ -127,6 +128,7 @@
                     text-decoration: none;
                     background : #E4F5FF;
                     color: #000;
+                    text-shadow: 0px 0px #000;
                 }
             }
 
@@ -136,6 +138,7 @@
                 a{
                     color: #000;
                     font-size: 14px;
+                    text-shadow: 0px 0px #000;
                 }
             }
         }
