--- a/public/stylesheets/less/_old_content.less
+++ b/public/stylesheets/less/_old_content.less
@@ -9,13 +9,22 @@
 }
 
 .bg-welcome{
-    background: url('/images/v2-assets/default-top-bg-v1.svg'), url('/images/v2-assets/default-top-bg-v1.png') ;
+    // background: url('/images/v2-assets/default-top-bg-v1.svg'), url('/images/v2-assets/default-top-bg-v1.png') ;
+    // background-position: center bottom;
+    // background-repeat: repeat-x;
+    // position: absolute;
+    // width: 100%;
+    // height: 700px;
+    // z-index: -1;
+
+    background: url(/images/v2-assets/default-top-bg-v1.png);
     background-position: center bottom;
-    background-repeat: repeat-x;
+    background-repeat: no-repeat;
     position: absolute;
     width: 100%;
     height: 700px;
     z-index: -1;
+    background-size: cover;
 }
 .block-welcome-1{
  
