--- a/views/partials/admin_header.ejs
+++ b/views/partials/admin_header.ejs
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-inverse" style="margin-bottom:20px">
     <div class="    container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/njs-admin">Trademarkers</a>
+            <a class="navbar-brand" href="/njs-admin">Admin Dashboard </a>
+            <a class="navbar-brand" href="/customer">Customer Dashboard </a>
         </div>
 
         <ul class="nav navbar-nav navbar-right">
