--- a/views/admin/trademark/index.ejs
+++ b/views/admin/trademark/index.ejs
@@ -38,7 +38,7 @@
                 <td><%= trademark.serialNumber %></td>
                 <td><%= trademark.status %></td>
                 <td><%= trademark.statusDate %></td>
-                <td><%= moment(trademark.created_at_formatted).format('MMM D, YYYY') %></td>
+                <td><%= trademark.created_at_formatted ? moment(trademark.created_at_formatted).format('MMM D, YYYY') : moment(trademark.created_at).format('MMM D, YYYY') %></td>
                 <td>
                     <a href="/njs-admin/manage/trademark/view/<%= trademark._id %>"><i class="fa fa-eye"></i></a>
                     <a href="/njs-admin/manage/trademark/edit/<%= trademark._id %>"><i class="fa fa-pen"></i></a>
