--- a/views/admin/trademark/index.ejs
+++ b/views/admin/trademark/index.ejs
@@ -37,12 +37,12 @@
                 <% if (trademark.serviceType) { %>
                 <td>Trademark <span style="text-transform: capitalize;"><%= trademark.serviceType %></span></td>
                 <% } else { %>
-                    <td><%= trademark.mysqlRecord.service %></td>
+                    <td><%= trademark.mysqlRecord ? trademark.mysqlRecord.service : '' %></td>
                 <% } %>
                 <td><%= trademark.serialNumber %></td>
                 <td><%= trademark.status %></td>
                 <td><%= trademark.statusDate %></td>
-                <td><%= trademark.created_at_formatted ? moment(trademark.created_at_formatted).format('MMM D, YYYY') : moment(trademark.mysqlRecord.created_at).format('MMM D, YYYY') %></td>
+                <td><%= trademark.created_at_formatted ? moment(trademark.created_at_formatted).format('MMM D, YYYY') : (trademark.mysqlRecord ? moment(trademark.mysqlRecord.created_at).format('MMM D, YYYY'):'') %></td>
                 <td>
                     <a href="/njs-admin/manage/trademark/view/<%= trademark._id %>"><i class="fa fa-eye"></i></a>
                     <a href="/njs-admin/manage/trademark/edit/<%= trademark._id %>"><i class="fa fa-pen"></i></a>
