--- a/views/admin/order/index.ejs
+++ b/views/admin/order/index.ejs
@@ -15,7 +15,7 @@
 </div>
                     
 <div clss="col-md-12">
-    <table id="dataTableAdmin" class="display" style="width:100%">
+    <table id="dataTableTrademarks" class="display" style="width:100%">
         <thead>
             <tr>
                 <th>Order Code</th>
@@ -32,7 +32,7 @@
         <% orders.forEach(function(order,key) {  %>
    
             <tr>
-                <td><%= order.orderNumber %></td>
+                <td data-sort="<%= moment(order.created_at_formatted).unix() %>"><%= order.orderNumber %></td>
                 <td><%= order.invoiceCode ? order.invoiceCode : (order.charge && order.charge.reference ? order.charge.reference : '') %></td>
                 <td>
                     <%
@@ -49,7 +49,7 @@
                 <td><%= order.user ? order.user.name : '' %></td>
                 <td><%= order.paid ? 'Paid' : 'Unpaid' %></td>
                
-                <td data-sort="<%= moment(order.created_at_formatted).unix() %>"><%= moment(order.created_at_formatted).format('MMM D, YYYY') %></td>
+                <td ><%= moment(order.created_at_formatted).format('MMM D, YYYY') %></td>
 
                 <td>
                     <a href="/njs-admin/manage/orders/view/<%= order._id %>"><i class="fa fa-eye"></i></a>
