--- a/views/admin/trademark/index.ejs
+++ b/views/admin/trademark/index.ejs
@@ -19,11 +19,12 @@
         <thead>
             <tr>
                 <th>Order Ref</th>
+                <th>Country</th>
                 <th>Mark</th>
                 <th>Service Type</th>
                 <th>Serial Number</th>
                 <th>Status</th>
-                <th>Status date</th>
+                <th>Due date</th>
                 <th>Date Ordered</th>
                 <th>Action</th>
             </tr>
@@ -32,7 +33,16 @@
         <% trademarks.forEach(function(trademark,key) { if(trademark.mark) { %>
    
             <tr>
-                <td data-sort="<%= moment(trademark.created_at_formatted).unix() %>"><%= trademark.orderCode %></td>
+                <%
+                let dateCreated;
+                if( trademark.created_at_formatted ) {
+                    dateCreated = trademark.created_at_formatted
+                } else if (trademark.mysqlRecord && trademark.mysqlRecord.created_at) {
+                    dateCreated = trademark.mysqlRecord.created_at
+                }
+                %>
+                <td data-sort="<%= moment(dateCreated).unix() %>"><%= trademark.orderCode %></td>
+                <td><%= trademark.country %></td>
                 <td><%= trademark.mark %></td>
                 <% if (trademark.serviceType) { %>
                 <td>Trademark <span style="text-transform: capitalize;"><%= trademark.serviceType %></span></td>
@@ -40,9 +50,9 @@
                     <td><%= trademark.mysqlRecord ? trademark.mysqlRecord.service : '' %></td>
                 <% } %>
                 <td><%= trademark.serialNumber %></td>
-                <td><%= trademark.status %></td>
-                <td><%= trademark.statusDate %></td>
-                <td><%= trademark.created_at_formatted ? moment(trademark.created_at_formatted).format('MMM D, YYYY') : (trademark.mysqlRecord ? moment(trademark.mysqlRecord.created_at).format('MMM D, YYYY'):'') %></td>
+                <td><%= trademark.status == 'Others' ? trademark.otherStatus : trademark.status %></td>
+                <td><%= trademark.dueDate ? moment(trademark.dueDate).format('MMM D, YYYY') : '-' %></td>
+                <td><%= dateCreated ? moment(dateCreated).format('MMM D, YYYY') : '-' %></td>
                 <td>
                     <a href="/njs-admin/manage/trademark/view/<%= trademark._id %>"><i class="fa fa-eye"></i></a>
                     <a href="/njs-admin/manage/trademark/edit/<%= trademark._id %>"><i class="fa fa-pen"></i></a>
